--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     docker:
       - image: *docker_image
+        environment:
+          TZ:"America/Los_Angeles"
     steps:
       - run: *install_common
       - run: |
