--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,6 @@ aliases:
   - &docker_image ubuntu:latest
   - &install_common |
       apt-get update -qq
-      apt-get install -yq tzdata && \
-      ln -fs /usr/share/zoneinfo/Europe/Warsaw /etc/localtime && \
-      dpkg-reconfigure -f noninteractive tzdata
       apt-get install -qq software-properties-common
       add-apt-repository -y ppa:ubuntu-toolchain-r/test
       #apt-get update -qq
@@ -15,7 +12,7 @@ jobs:
     docker:
       - image: *docker_image
         environment:
-             TZ: "America/Los_Angeles"
+             TZ: ""Europe/Warsaw""
     steps:
       - run: *install_common
       - run: |
