--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,4 +18,7 @@ jobs:
     steps:
     - name: Install CMAKE GIT and libs
       run: 'sudo apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock libgmock-dev libmosquitto-dev libi2c-dev'
-    
+    - name: pwd
+      run: pwd
+    - name: ls
+      run: ls
