--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,7 +21,7 @@ jobs:
     - name: pwd
       run: pwd
     - name: ls
-      run: 'cd .. && ls -lah'
+      run: 'cd / && du -h'
     - name: cd iDom_server_OOP
       run: cd iDom_server_OOP
     - name: cmake
