--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -34,6 +34,8 @@ jobs:
       run: cmake ./iDom_server_OOP
     - name: make iDom app
       run: make -j4
+    - name: clean cmake
+      run: cmake -U *
     - name: cmake iDom test
       run: cmake ./iDom_server_OOP/test/iDom_TESTs-CMAKE
     - name: make iDom test
