--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,5 +44,5 @@ jobs:
       run: ls -lah
       working-directory: ./iDom_server_OOP/test/iDom_TESTs-CMAKE
     - name: run test
-      run: .iDom*
+      run: ./iDom_TESTs-CMAKE
       working-directory: ./iDom_server_OOP/test/iDom_TESTs-CMAKE
