--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -36,8 +36,8 @@ jobs:
       run: pwd
     - name: cmake iDom app
       run: cmake ./iDom_server_OOP
-   # - name: make iDom app
-  #    run: make -j4
+    - name: make iDom app
+      run: make -j4
     - name: cmake iDom test
       run: cmake .
       working-directory: ./iDom_server_OOP/test/iDom_TESTs-CMAKE
@@ -52,3 +52,5 @@ jobs:
       working-directory: ./iDom_server_OOP/test/iDom_TESTs-CMAKE
     - name: show logs
       run: cat /mnt/ramdisk/iDom_log_BT.log
+    - name: generate report
+      run: "llvm-profdata  merge -o test.profdata default.profraw && llvm-cov report ./iDom_TESTs-CMAKE -instr-profile=test.profdata -use-color"
