--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
 
       - run:
           name: Build Application
-          command: make ./koko
+          command: make ./koko/
 
       - run:
           name: Set Permissions
@@ -79,7 +79,7 @@ jobs:
 
       - run:
           name: Build Test
-          command: make -j2 ./iDom_server_OOP/test/iDom_TESTs-CMAKE
+          command: make -j2 ./iDom_server_OOP/test/iDom_TESTs-CMAKE/
 
       - run:
           name: Set Test Permissions
