--- a/iDom_server_OOP/docker/deploy/idom_developer/dockerfile
+++ b/iDom_server_OOP/docker/deploy/idom_developer/dockerfile
@@ -1,19 +1,45 @@
 FROM ubuntu:latest
-RUN apt-get update && \
-    apt-get install -yq tzdata && \
-    ln -fs /usr/share/zoneinfo/Europe/Warsaw /etc/localtime && \
-    dpkg-reconfigure -f noninteractive tzdata
-    
+
+# Ustawienie strefy czasowej i konfiguracja tzdata
+RUN ln -fs /usr/share/zoneinfo/Europe/Warsaw /etc/localtime && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata && \
+    dpkg-reconfigure --frontend noninteractive tzdata
+
 ENV TZ="Europe/Warsaw"
-RUN apt-get update && apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock libgmock-dev libmosquitto-dev libi2c-dev clang llvm make valgrind
-RUN touch /dev/tty0
-RUN mkdir /mnt/ramdisk
-RUN apt-get update && apt-get install -y openssh-server
-# Configure SSH
-RUN mkdir /var/run/sshd
-RUN echo 'root:redhat' | chpasswd
-#password for user login
-RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+
+# Instalacja wymaganych pakietów
+RUN apt-get update && apt-get install -y \
+    cmake \
+    git \
+    libmpd-dev \
+    curl \
+    libcurl4-openssl-dev \
+    libmpdclient-dev \
+    libgtest-dev \
+    google-mock \
+    libgmock-dev \
+    libmosquitto-dev \
+    libi2c-dev \
+    clang \
+    llvm \
+    make \
+    valgrind \
+    openssh-server && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Dodatkowe operacje
+RUN touch /dev/tty0 && \
+    mkdir /mnt/ramdisk
+
+# Konfiguracja SSH
+RUN mkdir /var/run/sshd && \
+    echo 'root:redhat' | chpasswd && \
+    sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+
+# Otwieranie portu SSH
 EXPOSE 22
-# Start SSH server
+
+# Uruchamianie serwera SSH
 CMD ["/usr/sbin/sshd", "-D"]
