--- a/iDom_server_OOP/docker/deploy/idom_server/dockerfile
+++ b/iDom_server_OOP/docker/deploy/idom_server/dockerfile
@@ -1,17 +1,32 @@
 FROM ubuntu:latest
 
-RUN apt-get update && \
-    apt-get install -yq tzdata && \
-    ln -fs /usr/share/zoneinfo/Europe/Warsaw /etc/localtime && \
-    dpkg-reconfigure -f noninteractive tzdata
-    
+# Ustawienie strefy czasowej i konfiguracja tzdata
+RUN ln -fs /usr/share/zoneinfo/Europe/Warsaw /etc/localtime && \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata && \
+    dpkg-reconfigure --frontend noninteractive tzdata
+
 ENV TZ="Europe/Warsaw"
 
+# Kopiowanie aplikacji do obrazu
 COPY . /app
 WORKDIR /app
-RUN apt-get update -y && apt-get install -y  libmpd-dev 
-RUN apt install -y curl libcurl4-openssl-dev libmpdclient-dev  libmosquitto-dev libi2c-dev
 
+# Instalacja zależności
+RUN apt-get update && \
+    apt-get install -y \
+    libmpd-dev \
+    curl \
+    libcurl4-openssl-dev \
+    libmpdclient-dev \
+    libmosquitto-dev \
+    libi2c-dev && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Otwieranie portów
 EXPOSE 48833/udp
 EXPOSE 48833/tcp
-ENTRYPOINT [ "/app/start.sh"]
+
+# Ustawienie punktu wejścia
+ENTRYPOINT ["/app/start.sh"]
