--- a/iDom_server_OOP/docker/deploy/idom_server/dockerfile
+++ b/iDom_server_OOP/docker/deploy/idom_server/dockerfile
@@ -24,6 +24,8 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+RUN chmod +x /app/start.sh
+
 # Otwieranie portów
 EXPOSE 48833/udp
 EXPOSE 48833/tcp
