--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -37,6 +37,8 @@ set(LIBS_SRC
     "../../libs/circular_buffer/circular_buffer.cpp"
     "../../libs/circular_buffer/test/BT.cpp"
     "../../libs/TEST/testif.cpp"
+    "../../libs/ThreadPool/threadpool.cpp"
+    "../../libs/ThreadPool/test/threadpool_BT.cpp"
      )
 
     set(SOURCE_FILES  "main.cpp" "test_data.h"
